<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="8dp">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/one"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_one"/>
            <CheckBox
                android:id="@+id/chb_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/design_var"/>
            <CheckBox
                android:id="@+id/chb_development"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/development_var"/>
            <CheckBox
                android:id="@+id/chb_distribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distribution_var"/>
            <CheckBox
                android:id="@+id/chb_incorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_var"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/two"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_two"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_findview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/findViewById_method"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startActivity_method"/>

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onCreate_method"/>
            </RadioGroup>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/three"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_three"/>
            <EditText
                android:id="@+id/et_viewgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/four"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_four"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_file"/>
                <RadioButton
                    android:id="@+id/rb_manifest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manifest_file"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_file"/>
            </RadioGroup>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/five"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interface_var"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_class_var"/>
                <RadioButton
                    android:id="@+id/rb_listener"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/listener_var"/>
            </RadioGroup>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/submit_button"/>
    </LinearLayout>
</ScrollView>